# Workflow

./: .gitignore  extractor copy.py  extractor.py  index.html  main.py  pyproject.toml
Config/: database.py
helper/: helper_funtion.py
